client: fix overflow style

--- a/packages/client/src/components/emoji-picker/index.module.scss
+++ b/packages/client/src/components/emoji-picker/index.module.scss
@@ -1,8 +1,3 @@
-.wrap {
-  height: 300px;
-  overflow: auto;
-}
-
 .listWrap {
   display: flex;
   padding: 0;
